--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,9 @@ Crashlytics-build.properties
 
 # сериализованный кеш-файл Android Studio 3.1+
 .idea / caches / build_file_checksums.ser
+/Booleans.iml
+/.idea/encodings.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/uiDesigner.xml
+/.idea/vcs.xml
